# Fashion_Recommender_System

./: README.md  app.py  main.py  pyproject.toml  test.py
imp/: embeddings.pkl  filenames.pkl
